fix(glsl): hand back the walked tables in the order they were filled
Four Map.copyOf results are walked to write emitted text or a log line, and
that method promises no iteration order: the runtime shuffles it on every
start. LegacyGlsl already carries the rule and the reason, and VertexPrologue
already applies it to its own set. The tables are the volumes a unit reads,
the inputs a mesh has not got, the varyings a stage is owed, and the flat
volume map PackTextures hands over. The declarators of a file scope stay on
Map.copyOf: nothing walks that one, it is only looked up.